<resources>
    <string name="app_name">Cassio!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Nustatymai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adeed"> pridėta!</string>
    <string name="choose_food">Pasirinkti maistą</string>
    <string name="new_food">Naujas maistas</string>
    <string name="home_screen">Namai</string>
    <string name="my_foods">Mano produktai</string>
    <string name="first">Pirmas</string>
    <string name="last">Paskutinis</string>
    <string name="daily_view">Dienų peržiūra</string>
    <string name="nutrition_file_key">nutrition_file_key</string>
    <string name="calories_main_key">com.example.grantas.PREFERENCE_FILE_KEY</string>
    <string name="fat">Riebalai</string>
    <string name="carbohydrates">Angliavandeniai</string>
    <string name="protein">Baltymai</string>
    <string name="search_food">Ieškoti produkto</string>
    <string name="products_not_found">Produktų nerasta!</string>
    <string name="camera_permission_denied">Negauta prieigos prie kameros</string>
    <string name="empty">Tuščia!</string>
    <string name="food_log">Maisto žurnalas</string>
    <string name="confirm_save_and_clear">Ar norite išsaugoti šią dieną ir pradėti naują?</string>
    <string name="yes">Taip</string>
    <string name="no">Ne</string>
    <string name="no_saved_info">Nėra išsaugotos informacijos!</string>
    <string name="delete_all">Ištrinti viską</string>
    <string name="pref_autosave">Automatiškai išsaugoti maisto žurnalą</string>
    <string name="pref_autosave_summ">Po kiekvienos dienos automatiškai išsaugoti ir išvalyti maisto žurnalą</string>
    <string name="autosave_information_alert">Duomenys išsisaugoja automatiškai! Norėdami išsaugoti rankiniu būdu, eikite į nustatymus</string>
    <string name="cals">kal.</string>
    <string name="confirm_clear_all">Ar norite ištrinti visą istoriją?</string>
    <string name="create_food">Sukurti maistą</string>
    <string name="choose_amount">Pasirinkti kiekį:</string>
    <string name="delete_my_food">Ištrinti produktą %s?</string>
    <string name="input_grams">Įveskite gramus</string>
    <string name="remember_as_default_size">Prisiminti kaip numatytąjį kiekį</string>
    <string name="add">Pridėti</string>
    <string name="cancel">Atšaukti</string>
    <string name="average">Vidurkis: </string>
    <string name="name">Pavadinimas</string>
    <string name="calories">Kalorijos</string>
    <string name="grams">Gramai</string>
    <string name="save_and_clear">Išsaugoti maisto žurnalą</string>
    <string name="edit">Keisti</string>
    <string name="save">Išsaugoti</string>
    <string name="create_recipe">Sukurti receptą</string>
    <string name="privacy_policy">Privatumo politika</string>
    <string name="scan_barcode">Nuskaityti brūkšninį kodą</string>
    <string name="createNewRecipe">Nėra esamų receptų. Ar norite sukurti naują?</string>
    <string name="chooseRecipe">Pasirinkite į kurį receptą norite pridėti:</string>
    <string name="recipe_name">Recepto pavadinimas</string>
    <string name="view_recipes">Peržiūrėti receptus</string>
</resources>
