<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="25px"
    android:minHeight="25px">
    <FrameLayout android:name="initialFragment"
        android:id="@+id/expandable_fragment_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dip" />
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.SearchView
            android:minWidth="25px"
            android:minHeight="25px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/search_food"
            android:clickable="true"
            android:id="@+id/searchviewmyfoods" />
    </android.support.design.widget.AppBarLayout>

    <ExpandableListView
        android:minWidth="25px"
        android:minHeight="25px"
        android:listSelector="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="86dp"
        android:clipToPadding="false"
        android:id="@+id/expandableviewmyfoods" />
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/emptymyfoodsview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">
                <TextView
                    android:text="@string/products_not_found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
                <Button
                    android:id="@+id/emptymyfoodsbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_food"/>
                </LinearLayout>
</LinearLayout>